    * The Python wrappers are now disabled by default.  They can be compiled
      by passing the --enable-python flag to the configure script.  This will
      allow users to attempt to compile the wrappers on various systems as
      desired.
    * Added XML support for reading in parameter files when using PDB files
      as input.  New XML files can be found in tools/conversion/param/vparam.
    * Added XML support for reading "PQR" files in XML format.  
  - BUG FIXES
    * Updated psize.py to use centers and radii when calculating grid sizes
      (thanks to John Mongan)
    * Fixed problems with FEM-based LPBE and LRPBE calculations
    * Fixed a minor bug in the configure script that prevented MPI libraries
      from being found when using certain compilers.
    * Updated acinclude.m4, aclocal.m4, config/* for new version (1.9) of
      automake and compatibility with new MALOC
    * Fixed a bug where reading in a file in PDB format had atom IDs starting 
      at 1 rather than 0, leading to a segmentation fault.
    * Fixed a bug in mypde.f where double precision values were initialized
      with single precision number (causing multiplication errors).
	
#############################################################################
BETA PUBLIC RELEASE VERSION 0.4.0       12-14-05 
#############################################################################
  - NEW FEATURES
    * New version of the 'acc' program available.
    * Added additional verbosity to APBS output.
    * Added tools/python/vgrid to the autoconf script. The directory compiles
      with the rest of the Python utilities and is used for manipulating
      dx files.
    * Modified the tools/python/noinput.py example to show the ability to get
      and print energy and force vectors directly into Python arrays.
    * Added dx2uhbd tool to tools/mesh for converting from dx format to UHBD
      format (Thanks to Robert Konecny)